# recombinant

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  CREDITS  CompilerOptions.cmake  README.md  design_ideas.txt
.github/workflows/: CI.yml
api/: CMakeLists.txt  Exceptions.h  FastaFile.cpp  FileFormat.cpp  FileFormat.h  GenbankFlatFile.cpp  LocalFileSource.cpp  LocalFileSource.h  Sequence.cpp  Sequence.h  Source.cpp  Source.h
build_helpers/macos/localports/graphics/wxWidgets-3.2/: Portfile
recombinant/: AboutDialog.cpp  AboutDialog.h  BundleMacOS.cmake.in  CMakeLists.txt  FilesDataModel.cpp  FilesDataModel.h  Info.plist.in  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  SourceDataModel.cpp  SourceDataModel.h  TreeFrame.cpp  TreeFrame.h  TreeWindow.cpp  TreeWindow.h  ViewWindow.cpp  ViewWindow.h  ids.h  main.cpp  recombinant.cpp  recombinant.h  strings.cpp  strings.h  tests.cpp  version.cpp.in  version.h  wx_headers.h
recombinant/icons/: main.icns  main.rc
